--- a/app/src/main/res/layout/activity_filter_the_data.xml
+++ b/app/src/main/res/layout/activity_filter_the_data.xml
@@ -1,96 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#E5E5E5"
     tools:context=".FilterTheDataActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:background="@color/IceColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/White300">
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="15dp">
 
-            <TextView
-                android:id="@+id/tv_filter_tinhthanh"
-                android:layout_width="150dp"
+            <!-- Filter by Price -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helvetica_neue"
-                android:text="TP Hồ Chí Minh"
-                android:textColor="@color/black" />
+                android:orientation="vertical"
+                android:paddingBottom="10dp">
 
-            <TextView
-                android:id="@+id/tv_filter_loai"
-                android:layout_width="130dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lọc theo giá phòng"
+                    android:textSize="18dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/helvetica_bold" />
+
+                <SeekBar
+                    android:id="@+id/priceSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="1000000"
+                    android:progress="200000"
+                    android:paddingTop="10dp" />
+
+                <TextView
+                    android:id="@+id/priceRangeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Giá: 200.000 đ"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:paddingTop="5dp"
+                    android:fontFamily="@font/helvetica_neue_medium" />
+            </LinearLayout>
+
+            <!-- Filter by Location -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:fontFamily="@font/helvetica_neue"
-                android:text="Loại Phòng"
-                android:textColor="@color/black" />
+                android:orientation="vertical"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lọc theo khu vực"
+                    android:textSize="18dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/helvetica_bold" />
+
+                <Spinner
+                    android:id="@+id/locationSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/report_bg"
+                    android:padding="10dp"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+            <!-- Filter by Category -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lọc theo thể loại"
+                    android:textSize="18dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/helvetica_bold" />
+
+                <Spinner
+                    android:id="@+id/categorySpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/report_bg"
+                    android:padding="10dp"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+            <!-- Sort by Price -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sắp xếp theo giá"
+                    android:textSize="18dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/helvetica_bold" />
+
+                <RadioGroup
+                    android:id="@+id/sortRadioGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <RadioButton
+                        android:id="@+id/sortAscRadioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Giá tăng dần"
+                        android:textSize="16dp"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/helvetica_neue" />
+
+                    <RadioButton
+                        android:id="@+id/sortDescRadioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Giá giảm dần"
+                        android:textSize="16dp"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/helvetica_neue"
+                        android:layout_marginStart="20dp" />
+                </RadioGroup>
+            </LinearLayout>
+
+            <!-- Apply Filters Button -->
+            <Button
+                android:id="@+id/applyFiltersButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Áp dụng lọc"
+                android:background="@drawable/button_bg"
+                android:textColor="#ffffff"
+                android:fontFamily="@font/helvetica_bold"
+                android:layout_marginTop="20dp" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnApDung"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/round_white"
-            android:backgroundTint="#FAF8F7"
-            android:fontFamily="@font/helvetica_bold"
-            android:text="Áp dụng"
-            android:textColor="@color/GlacierBlueColor"
-            android:textSize="10dp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/lv_filterprovinder"
-        android:layout_width="150dp"
-        android:layout_height="680dp"
-        android:minWidth="150dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="258dp"
-        android:layout_height="649dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="152dp">
-
-        <Switch
-            android:id="@+id/switch_check"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:fontFamily="@font/helvetica_neue"
-            android:text="Giá tăng dần"
-            android:textColor="@color/black" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_filter_loai"
-            android:layout_width="match_parent"
-            android:layout_height="662dp" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
